<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="1254dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="350dp"
        android:foregroundGravity="center_vertical"
        android:gravity="center_vertical"
        android:paddingBottom="60sp"
        android:paddingLeft="50sp"
        android:text="@string/txtTitle"
        android:textColor="@android:color/black"
        android:textColorHighlight="@android:color/holo_orange_light"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/txtYouth"
        android:layout_width="873dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingBottom="40sp"
        android:paddingLeft="40sp"
        android:text="@string/txtYouth"
        android:textColor="@android:color/black"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/txtAdult"
        android:layout_width="870dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingBottom="60sp"
        android:paddingLeft="50sp"
        android:text="@string/txtAdult"
        android:textColor="@android:color/black"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/txtFamily"
        android:layout_width="870dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingBottom="40sp"
        android:paddingLeft="40sp"
        android:text="@string/txtFamily"
        android:textColor="@android:color/black"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/txtSen"
        android:layout_width="870dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingBottom="40sp"
        android:paddingLeft="40sp"
        android:text="@string/txtSen"
        android:textColor="@android:color/black"
        android:textSize="50sp" />
</LinearLayout>

